fixed background not showing on ios

--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,12 @@ body
 {
     background-image: url('assets/background.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     margin-bottom: 165;
-    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
